# gnu_linux

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  README  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  expected1.txt  expected2.txt  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  libprotect.c  move.c
07_Environmental/: Makefile.am  build.sh  configure.ac  hasher.c
08_I18n/: configure.ac
08_I18n/po/: Makefile.am  ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: Makefile  maze.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.c  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  upstream.check
11_Documenting/: Doxyfile  Makefile.am  configure.ac
11_Documenting/man/: Makefile.am  guess.1
11_Documenting/po/: Makefile.am  ru.po
11_Documenting/src/: Makefile.am  guess.c  roman.c  roman.h
12_InstallPackaging/: Makefile.am  configure.ac
12_InstallPackaging/doc/: Doxyfile  Makefile.am
12_InstallPackaging/man/: Makefile.am  calc.1
12_InstallPackaging/po/: Makefile.am  ru.po
12_InstallPackaging/src/: Makefile.am  libcalc.c  libcalc.h  main.c
12_InstallPackaging/tests/: Makefile.am  test_calc.c
